# magento_connector

./: README.md  pyproject.toml  requirements.txt  setup.py
connector/: boot.py  hooks.py  patches.txt  tasks.py
connector/api/: erpnext_client.py  magento_client.py  magento_options.py
connector/connector/doctype/connector_settings/: connector_settings.json  connector_settings.py
connector/connector/doctype/item_magento_attribute/: __init__.py  item_magento_attribute.json  item_magento_attribute.py
connector/connector/doctype/item_magento_category/: __init__.py  item_magento_category.json  item_magento_category.py
connector/connector/doctype/magento_item_group/: magento_item_group.json  magento_item_group.py
connector/connector/doctype/magento_order_map/: magento_order_map.json  magento_order_map.py
connector/connector/doctype/magento_product_map/: magento_product_map.json  magento_product_map.py
connector/connector/doctype/magento_settings/: magento_settings.json  magento_settings.py
connector/connector/doctype/magento_sync_log/: magento_sync_log.json  magento_sync_log.py
connector/fixtures/: custom_field.json
connector/public/js/: item.js  magento_item_group.js  magento_settings.js  sales_invoice.js  sales_order.js
connector/security/: __init__.py  request_signing.py
connector/sync/: customer_sync.py  erpnext_product_sync.py  image_sync.py  inventory_sync.py  order_sync.py  payment_sync.py  product_sync.py  status_sync.py
connector/tests/: test_customer_sync.py  test_magento_client.py  test_order_sync.py  test_product_sync.py
(+4 files in other folders)
